--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -32,6 +32,7 @@
                     <button type="submit" class="btn btn-default">搜索</button>
                 </form>
                 <ul class="nav navbar-nav navbar-right">
+                    <li th:if="${session.user != null}"><a href="/publish">发布</a></li>
                     <li th:if="${session.user == null}"><a href="https://github.com/login/oauth/authorize?client_id=Iv1.0cae86197c0a5171&redirect_uri=http://localhost:8888/callback&scope=user&state=1">登录</a></li>
                     <li class="dropdown" th:if="${session.user != null}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.username}"> <span class="caret"></span></a>
